force-app/main/default/objects/Account/fields/Account_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Date__c</fullName>
    <description>Cuando se crea la cuenta en Huawei</description>
    <label>Account Creation Date</label>
    <type>DateTime</type>
</CustomField>