force-app/main/default/objects/Account/fields/AccountIntegrationFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountIntegrationFormula__c</fullName>
    <formula>IF( OR( RecordType.DeveloperName = &apos;Consumer&apos; , RecordType.DeveloperName = &apos;Business&apos;), 
			TEXT( CustomerIntegrationId__c )  &amp;  TEXT( BillingIntegrationId__c )  ,  
			IF(RecordType.DeveloperName = &apos;Billing&apos;, 
						TEXT( Parent.CustomerIntegrationId__c )  &amp;  TEXT( BillingIntegrationId__c ) , 
						&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Integration Formula</label>
    <type>Text</type>
</CustomField>