force-app/main/default/objects/Account/fields/AccountIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>AccountIntegrationId__c</fullName>
    <description>Account Integration Id (concatena 11 digitos del Customer Integration Id y 5 del Billing Integration Id)</description>
    <externalId>true</externalId>
    <inlineHelpText>Account Integration Id (concatena 11 digitos del Customer Integration Id y 5 del Billing Integration Id)</inlineHelpText>
    <label>Account Integration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>