force-app/main/default/objects/Account/fields/AgreementCod__c.field-meta.xml
<CustomField>
    <fullName>AgreementCod__c</fullName>
    <label>AgreementCod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>