force-app/main/default/objects/Account/fields/Asset_BE__c.field-meta.xml
<CustomField>
    <fullName>Asset_BE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Convergent Discount</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>