force-app/main/default/objects/Account/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <description>#Marketing #Sprint15 Atributo de mayor ponderación aplicado a la cuenta que se visualizará en V360.</description>
    <label>Attribute</label>
    <length>30</length>
    <type>Text</type>
</CustomField>