force-app/main/default/objects/Account/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <description>#Sprint16 #Marketing Account segment attributes</description>
    <label>Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Prensa</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>