force-app/main/default/objects/Account/fields/BillCycle_F__c.field-meta.xml
<CustomField>
    <fullName>BillCycle_F__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check Whether the Billcycle day field is updated</description>
    <label>BillCycle Flag</label>
    <type>Checkbox</type>
</CustomField>