force-app/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>Address2__c</referenceTo>
    <relationshipLabel>Billing Address Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>