force-app/main/default/objects/Account/fields/Billing_Day__c.field-meta.xml
<CustomField>
    <fullName>Billing_Day__c</fullName>
    <description>Campo agregado para almacenar el ciclo de  facturación de la cuenta</description>
    <label>Billing Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>