force-app/main/default/objects/Account/fields/BillingAddressCommunity__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressCommunity__c</fullName>
    <formula>IF(Billing_Address__r.Street_Name__c!=null,&apos; &apos;+Billing_Address__r.Street_Name__c,&apos;&apos;)+ 
IF( TEXT(Billing_Address__r.Address_Number__c)!=null,&apos; &apos;+TEXT(Billing_Address__r.Address_Number__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingAddressCommunity</label>
    <type>Text</type>
</CustomField>