force-app/main/default/objects/Account/fields/BillingAddressStore__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BillingAddressStore</label>
    <type>Checkbox</type>
</CustomField>