force-app/main/default/objects/Account/fields/BillingIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>BillingIntegrationId__c</fullName>
    <label>Billing Integration Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>