force-app/main/default/objects/Account/fields/Club_SubscriptionDate__c.field-meta.xml
<CustomField>
    <fullName>Club_SubscriptionDate__c</fullName>
    <description>Subscription Date Club Personal</description>
    <label>Club_SubscriptionDate</label>
    <type>DateTime</type>
</CustomField>