force-app/main/default/objects/Account/fields/Club_SubscriptionStatus__c.field-meta.xml
<CustomField>
    <fullName>Club_SubscriptionStatus__c</fullName>
    <description>Club Personal subscription status</description>
    <label>Club_SubscriptionStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Confirmada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>