force-app/main/default/objects/Account/fields/ClubMember__c.field-meta.xml
<CustomField>
    <fullName>ClubMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08 
Defines if the account is a Club Personal member</description>
    <label>Club Member</label>
    <type>Checkbox</type>
</CustomField>