force-app/main/default/objects/Account/fields/Cod_Promotion_DC__c.field-meta.xml
<CustomField>
    <fullName>Cod_Promotion_DC__c</fullName>
    <description>Convergent Discount</description>
    <label>Cod_Promotion_DC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>