force-app/main/default/objects/Account/fields/ContactIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>ContactIntegrationId__c</fullName>
    <externalId>true</externalId>
    <label>Contact Integration Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>