force-app/main/default/objects/Account/fields/ContactPreferencePhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPreferencePhone__c</fullName>
    <description>Contact Preference Phone</description>
    <inlineHelpText>Contact Preference Phone</inlineHelpText>
    <label>Contact Preference Phone</label>
    <type>Phone</type>
</CustomField>