force-app/main/default/objects/Account/fields/CrediLimit_Error_Flag__c.field-meta.xml
<CustomField>
    <fullName>CrediLimit_Error_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For US PFTA - 12690 , when the S131 service fails we are updating this flag to true</description>
    <label>CrediLimit Error Flag</label>
    <type>Checkbox</type>
</CustomField>