force-app/main/default/objects/Account/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <description>credit limit</description>
    <inlineHelpText>credit limit</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>