force-app/main/default/objects/Account/fields/CreditRisk__c.field-meta.xml
<CustomField>
    <fullName>CreditRisk__c</fullName>
    <description>Credit Risk</description>
    <label>Credit Risk</label>
    <length>18</length>
    <type>Text</type>
</CustomField>