force-app/main/default/objects/Account/fields/CuitNumber__c.field-meta.xml
<CustomField>
    <fullName>CuitNumber__c</fullName>
    <description>Campo para registrar el numero de Cuit</description>
    <label>CuitNumber</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>