force-app/main/default/objects/Account/fields/CuitType__c.field-meta.xml
<CustomField>
    <fullName>CuitType__c</fullName>
    <description>Valid if cuit starts with 2 or 3</description>
    <formula>IF(  TEXT(DocumentType__c )= &apos;CUIT&apos; &amp;&amp;  BEGINS( DocumentNumber__c , &apos;3&apos;), &apos;3X&apos;, &apos;2X&apos;)</formula>
    <label>CuitType</label>
    <type>Text</type>
</CustomField>