force-app/main/default/objects/Account/fields/CustomerIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>CustomerIntegrationId__c</fullName>
    <label>Customer Integration Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>