force-app/main/default/objects/Account/fields/CustomerIntegrationIdText__c.field-meta.xml
<CustomField>
    <fullName>CustomerIntegrationIdText__c</fullName>
    <description>Converts the Customer Integration Id field into a text and fills with leading 0 to be sent to Huawei</description>
    <formula>LPAD(TEXT(CustomerIntegrationId__c),11,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerIntegrationIdText</label>
    <type>Text</type>
</CustomField>