force-app/main/default/objects/Account/fields/DaysRemaining__c.field-meta.xml
<CustomField>
    <fullName>DaysRemaining__c</fullName>
    <formula>NextAccreditation__c-today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysRemaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>