force-app/main/default/objects/Account/fields/Debt_Financing__c.field-meta.xml
<CustomField>
    <fullName>Debt_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creado a partir de historia de usuario PFTA-3291 del Sprint 4 de Care</description>
    <label>Debt Financing</label>
    <type>Checkbox</type>
</CustomField>