force-app/main/default/objects/Account/fields/Default_account__c.field-meta.xml
<CustomField>
    <fullName>Default_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para marcar la cuenta de facturación default del cliente en Huawei</description>
    <label>Default account</label>
    <type>Checkbox</type>
</CustomField>