force-app/main/default/objects/Account/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>DocumentNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>