force-app/main/default/objects/Account/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>DocumentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>CUIT</fullName>
            </value>
            <value>
                <fullName>CUIL</fullName>
            </value>
            <value>
                <fullName>LEN</fullName>
            </value>
            <value>
                <fullName>LCV</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>CID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>