force-app/main/default/objects/Account/fields/Dunning__c.field-meta.xml
<CustomField>
    <fullName>Dunning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mora</description>
    <label>Dunning</label>
    <type>Checkbox</type>
</CustomField>