force-app/main/default/objects/Account/fields/Enacom__c.field-meta.xml
<CustomField>
    <fullName>Enacom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for ENACOM Claims to official Organizations US-0050533</description>
    <label>ENACOM</label>
    <type>Checkbox</type>
</CustomField>