force-app/main/default/objects/Account/fields/Fecha_Ultima_Solicitud_Limite_Compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Solicitud_Limite_Compra__c</fullName>
    <description>Este campo guarda la fecha y la hora en que se realizó la última solicitud de cambio de límite de compra (este límite de compra se guarda en Account.CreditLimit__c)</description>
    <label>Fecha Ultima Solicitud Limite Compra</label>
    <type>DateTime</type>
</CustomField>