force-app/main/default/objects/Account/fields/Fecha_Ultima_Suspension_Voluntaria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Suspension_Voluntaria__c</fullName>
    <label>Last Date Suspension Voluntary</label>
    <type>Date</type>
</CustomField>