force-app/main/default/objects/Account/fields/Fecha_Ultimo_Cambio_Limite_Compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Cambio_Limite_Compra__c</fullName>
    <description>Este campo guarda la última fecha y hora en que se hizo efectivo el cambio de límite de compra (el límite de compra se guarda en Account.CreditLimit__c)</description>
    <label>Fecha Ultimo Cambio Limite Compra</label>
    <type>DateTime</type>
</CustomField>