force-app/main/default/objects/Account/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud</label>
    <type>Checkbox</type>
</CustomField>