force-app/main/default/objects/Account/fields/HardOfHearing__c.field-meta.xml
<CustomField>
    <fullName>HardOfHearing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint13
Indicates if the account contact has audition problems</description>
    <label>Hard of hearing</label>
    <type>Checkbox</type>
</CustomField>