force-app/main/default/objects/Account/fields/Has_Payment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Payment_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will help to determine if the customer has or not a Payment Agreement with the company</description>
    <label>Has Payment Agreement?</label>
    <type>Checkbox</type>
</CustomField>