force-app/main/default/objects/Account/fields/HuaweiNotice_S015__c.field-meta.xml
<CustomField>
    <fullName>HuaweiNotice_S015__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HuaweiNotice S015</label>
    <type>Checkbox</type>
</CustomField>