force-app/main/default/objects/Account/fields/HuaweiNotice_S037__c.field-meta.xml
<CustomField>
    <fullName>HuaweiNotice_S037__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HuaweiNotice_S037</label>
    <type>Checkbox</type>
</CustomField>