force-app/main/default/objects/Account/fields/HuaweiNotice_S202__c.field-meta.xml
<CustomField>
    <fullName>HuaweiNotice_S202__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HuaweiNotice S202</label>
    <type>Checkbox</type>
</CustomField>