force-app/main/default/objects/Account/fields/Incident_Affected_By__c.field-meta.xml
<CustomField>
    <fullName>Incident_Affected_By__c</fullName>
    <label>Incidente Afecta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>