force-app/main/default/objects/Account/fields/Incident_Type_Affected_By__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type_Affected_By__c</fullName>
    <label>Tipo Incidente Afecta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet (SNM)</fullName>
            </value>
            <value>
                <fullName>Voz (SUR)</fullName>
            </value>
            <value>
                <fullName>Móvil (CRM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>