force-app/main/default/objects/Account/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint13
Indicates if the accounts contact is an influencer.</description>
    <label>Influencer</label>
    <type>Checkbox</type>
</CustomField>