force-app/main/default/objects/Account/fields/Last_Change_Date_Billing_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Date_Billing_Day__c</fullName>
    <description>Captures the last change of billing cycle date.</description>
    <label>Last Change Date Billing Day</label>
    <type>DateTime</type>
</CustomField>