force-app/main/default/objects/Account/fields/Last_Modified_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Email_Date__c</fullName>
    <description>this field is checking the last date that the Email field was changed</description>
    <label>Last Modified Email Date</label>
    <type>Date</type>
</CustomField>