force-app/main/default/objects/Account/fields/Mayor_de_edad__c.field-meta.xml
<CustomField>
    <fullName>Mayor_de_edad__c</fullName>
    <formula>OR (YEAR(TODAY())-YEAR(vlocity_cmt__PrimaryContactId__r.Birthdate)&gt;18, YEAR(TODAY())-YEAR(vlocity_cmt__PrimaryContactId__r.Birthdate)=18 &amp;&amp; MONTH(TODAY())-MONTH(vlocity_cmt__PrimaryContactId__r.Birthdate)&gt;0, YEAR(TODAY())-YEAR(vlocity_cmt__PrimaryContactId__r.Birthdate)=18 &amp;&amp; MONTH(TODAY())-MONTH(vlocity_cmt__PrimaryContactId__r.Birthdate)=0 &amp;&amp; DAY(TODAY())-DAY(vlocity_cmt__PrimaryContactId__r.Birthdate)&gt;=0) || Name = &apos;Dummy Account&apos; ||  RecordType.Name = &apos;Service&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mayor de edad</label>
    <type>Checkbox</type>
</CustomField>