force-app/main/default/objects/Account/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <description>Indicador de si la cuenta fue migrada desde legado. Nativo=Cuenta creada en Vlocity, Migrado=Cuenta creada en Legacy y migrada a Vlocity, En Migracion=Cuenta Creada en Legacy en proceso de migración a Vlocity</description>
    <inlineHelpText>Indicador de si la cuenta fue migrada desde legado. 
Nativo=Cuenta creada en Vlocity
Migrado=Cuenta creada en Legacy y migrada a Vlocity
En Migracion=Cuenta Creada en Legacy en proceso de migración a Vlocity</inlineHelpText>
    <label>Migrated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nativo</fullName>
                <default>true</default>
                <label>Nativo</label>
            </value>
            <value>
                <fullName>Migrado</fullName>
            </value>
            <value>
                <fullName>En Migracion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>