force-app/main/default/objects/Account/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <description>#MarketingTeam #Sprint08 
Indicates if the Age of the primary contact of the account is less than 18</description>
    <formula>vlocity_cmt__PrimaryContactId__r.vlocity_cmt__Age__c &lt; 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age less than 18</inlineHelpText>
    <label>Minor</label>
    <type>Checkbox</type>
</CustomField>