force-app/main/default/objects/Account/fields/modoPagoSOS__c.field-meta.xml
<CustomField>
    <fullName>modoPagoSOS__c</fullName>
    <description>Exclusivo reglas de elegibilidad de productos Recarga SOS a traves del servicio getAvailableLoans</description>
    <label>Modo Pago SOS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>