force-app/main/default/objects/Account/fields/Monto_DC__c.field-meta.xml
<CustomField>
    <fullName>Monto_DC__c</fullName>
    <label>Monto_DC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>