force-app/main/default/objects/Account/fields/NewBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>NewBillingAddress__c</fullName>
    <formula>IF(Billing_Address__r.Location_Name__c!=null,&apos; &apos;+Billing_Address__r.Location_Name__c,&apos;&apos;)+ 
IF(Billing_Address__r.Street_Name__c!=null,&apos; &apos;+Billing_Address__r.Street_Name__c,&apos;&apos;)+ 
IF( TEXT(Billing_Address__r.Tipo_de_Zona__c)!= null,&apos; &apos;+TEXT(Billing_Address__r.Tipo_de_Zona__c),&apos;&apos;)+ 
IF( TEXT(Billing_Address__r.Address_Number__c)!=null,&apos; &apos;+TEXT(Billing_Address__r.Address_Number__c),&apos;&apos;)+ 
IF( Billing_Address__r.Piso__c!=null,&apos; &apos;+Billing_Address__r.Piso__c,&apos;&apos;)+ 
IF( Billing_Address__r.Departamento__c!=null,&apos; &apos;+Billing_Address__r.Departamento__c,&apos;&apos;)+ 
IF(Billing_Address__r.Entre_calle_rio_1__c!=null,&apos; &apos;+Billing_Address__r.Entre_calle_rio_1__c,&apos;&apos;)+ IF(Billing_Address__r.Entre_calle_rio_2__c!=null,&apos; &apos;+Billing_Address__r.Entre_calle_rio_2__c,&apos;&apos;)+ 
IF(Billing_Address__r.ZIP_Code__c!=null,&apos; &apos;+Billing_Address__r.ZIP_Code__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewBillingAddress</label>
    <type>Text</type>
</CustomField>