force-app/main/default/objects/Account/fields/NewShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>NewShippingAddress__c</fullName>
    <formula>IF(Shipping_Address__r.Location_Name__c!=null,&apos; &apos;+Shipping_Address__r.Location_Name__c,&apos;&apos;)+
IF(Shipping_Address__r.Street_Name__c!=null,&apos; &apos;+Shipping_Address__r.Street_Name__c,&apos;&apos;)+
IF( TEXT(Shipping_Address__r.Tipo_de_Zona__c)!= null,&apos; &apos;+TEXT(Shipping_Address__r.Tipo_de_Zona__c),&apos;&apos;)+
IF( TEXT(Shipping_Address__r.Address_Number__c)!=null,&apos; &apos;+TEXT(Shipping_Address__r.Address_Number__c),&apos;&apos;)+
IF( Shipping_Address__r.Piso__c!=null,&apos; &apos;+Shipping_Address__r.Piso__c,&apos;&apos;)+
IF( Shipping_Address__r.Departamento__c!=null,&apos; &apos;+Shipping_Address__r.Departamento__c,&apos;&apos;)+
IF(Shipping_Address__r.Entre_calle_rio_1__c!=null,&apos; &apos;+Shipping_Address__r.Entre_calle_rio_1__c,&apos;&apos;)+ IF(Shipping_Address__r.Entre_calle_rio_2__c!=null,&apos; &apos;+Shipping_Address__r.Entre_calle_rio_2__c,&apos;&apos;)+
IF(Shipping_Address__r.ZIP_Code__c!=null,&apos; &apos;+Shipping_Address__r.ZIP_Code__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewShippingAddress</label>
    <type>Text</type>
</CustomField>