force-app/main/default/objects/Account/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <description>Get the next billing cycle date</description>
    <formula>IF(
 DAY(TODAY()) &lt; VALUE(TEXT(Billing_Day__c)),
 TODAY() + VALUE(TEXT(Billing_Day__c)) - DAY(TODAY()),
 ADDMONTHS(TODAY(),1) - (DAY(TODAY()) - VALUE(TEXT(Billing_Day__c)))
)</formula>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>