force-app/main/default/objects/Account/fields/NextAccreditation__c.field-meta.xml
<CustomField>
    <fullName>NextAccreditation__c</fullName>
    <formula>IF( 
	DAY(TODAY()) &gt;= VALUE(TEXT(Billing_Day__c)), 
		IF(MONTH(TODAY()) &lt;&gt; 12 , 
			DATE(YEAR(TODAY()) ,MONTH(TODAY()) + 1 ,VALUE( TEXT( Billing_Day__c ))), 
			DATE(YEAR(TODAY())+1 , 1 ,VALUE( TEXT( Billing_Day__c )))) , 
		IF(MONTH(TODAY()) &lt;&gt; 12 , 
			DATE(YEAR(TODAY()) ,MONTH(TODAY()) ,VALUE( TEXT( Billing_Day__c ))) , 
			DATE(YEAR(TODAY())+1 , 1 ,VALUE( TEXT( Billing_Day__c ))) ) 
)</formula>
    <label>NextAccreditation</label>
    <type>Date</type>
</CustomField>