force-app/main/default/objects/Account/fields/NotSighted__c.field-meta.xml
<CustomField>
    <fullName>NotSighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint13
Indicates if the accounts contact is not sighted.</description>
    <label>Not Sighted</label>
    <type>Checkbox</type>
</CustomField>