force-app/main/default/objects/Account/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>1-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>2-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>3-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>4-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>5-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>6-DETRACTORS</fullName>
            </value>
            <value>
                <fullName>7-PASSIVES</fullName>
            </value>
            <value>
                <fullName>8-PASSIVES</fullName>
            </value>
            <value>
                <fullName>9-PROMOTERS</fullName>
            </value>
            <value>
                <fullName>10-PROMOTERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>