force-app/main/default/objects/Account/fields/OrderScopeValues__c.field-meta.xml
<CustomField>
    <fullName>OrderScopeValues__c</fullName>
    <description>This field is used to store the information that should be populated on the order. Format should be JSON, with key as API field name and value the proper value for the corresponding field.</description>
    <label>OrderScopeValues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>