force-app/main/default/objects/Account/fields/PersonalClubCategory__c.field-meta.xml
<CustomField>
    <fullName>PersonalClubCategory__c</fullName>
    <label>Personal Club Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Premium/Black</fullName>
            </value>
            <value>
                <fullName>TRIAL</fullName>
            </value>
            <value>
                <fullName>Basico</fullName>
                <isActive>false</isActive>
                <label>Basico</label>
            </value>
            <value>
                <fullName>CLASICO</fullName>
                <isActive>false</isActive>
                <label>CLASICO</label>
            </value>
            <value>
                <fullName>Flor</fullName>
                <isActive>false</isActive>
                <label>Flor</label>
            </value>
            <value>
                <fullName>Premium</fullName>
                <isActive>false</isActive>
                <label>Premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>