force-app/main/default/objects/Account/fields/PersonalClubPoints__c.field-meta.xml
<CustomField>
    <fullName>PersonalClubPoints__c</fullName>
    <label>PersonalClubPoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>