force-app/main/default/objects/Account/fields/PhoneValidated__c.field-meta.xml
<CustomField>
    <fullName>PhoneValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Número de línea decisora validado.</description>
    <label>Phone Validated</label>
    <type>Checkbox</type>
</CustomField>