force-app/main/default/objects/Account/fields/Press__c.field-meta.xml
<CustomField>
    <fullName>Press__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08 
Indicates if the account belongs to press</description>
    <label>Press</label>
    <type>Checkbox</type>
</CustomField>