force-app/main/default/objects/Account/fields/PrimaryBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBillingAddress__c</fullName>
    <formula>BillingStreet &amp; &quot;  &quot; &amp; BillingCity &amp; &quot;  &quot; &amp; BillingPostalCode &amp; &quot;  &quot; &amp; BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimaryBillingAddress</label>
    <type>Text</type>
</CustomField>