force-app/main/default/objects/Account/fields/PrimaryContactName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactName__c</fullName>
    <label>PrimaryContactName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>