force-app/main/default/objects/Account/fields/Reclamo_Organismos_Oficiales__c.field-meta.xml
<CustomField>
    <fullName>Reclamo_Organismos_Oficiales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Claims to official org</description>
    <label>Defensa al Consumidor</label>
    <type>Checkbox</type>
</CustomField>