force-app/main/default/objects/Account/fields/Related_Document_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Document_Account__c</fullName>
    <label>Related Document Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>