force-app/main/default/objects/Account/fields/RelatedBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedBillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se utilizará para relacionar una service account con la billing account que corresponda.</description>
    <label>Related Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts - Related Billing Account</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>