force-app/main/default/objects/Account/fields/Restriccion_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Restriccion_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restriccion comercial</label>
    <type>Checkbox</type>
</CustomField>