force-app/main/default/objects/Account/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#MarketingTeam #Sprint08
Indicates if the accounts contact is retired.</description>
    <label>Retired</label>
    <type>Checkbox</type>
</CustomField>