force-app/main/default/objects/Account/fields/SA_Category__c.field-meta.xml
<CustomField>
    <fullName>SA_Category__c</fullName>
    <description>Category for Service Account creation process</description>
    <formula>CASE(MOD(Value(SA_Iterator__c),5), 0, &apos;C1&apos;, 1, &apos;C2&apos;, 2, &apos;C3&apos;, 3, &apos;C4&apos;, 4, &apos;C5&apos;,&apos;C6&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA_Category</label>
    <type>Text</type>
</CustomField>