force-app/main/default/objects/Account/fields/SA_Iterator__c.field-meta.xml
<CustomField>
    <fullName>SA_Iterator__c</fullName>
    <description>Iterator field to split the Accounts for the Service Processing.</description>
    <displayFormat>{0}</displayFormat>
    <label>SA_Iterator</label>
    <type>AutoNumber</type>
</CustomField>