force-app/main/default/objects/Account/fields/SalesOutboundSMS__c.field-meta.xml
<CustomField>
    <fullName>SalesOutboundSMS__c</fullName>
    <description>Sales Outbound SMS</description>
    <inlineHelpText>Sales Outbound SMS</inlineHelpText>
    <label>Sales Outbound SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>