force-app/main/default/objects/Account/fields/SalesOutboundSMSLastTryDate__c.field-meta.xml
<CustomField>
    <fullName>SalesOutboundSMSLastTryDate__c</fullName>
    <description>Sales Outbound SMS Last Try Date</description>
    <inlineHelpText>Sales Outbound SMS Last Try Date</inlineHelpText>
    <label>Sales Outbound SMS Last Try Date</label>
    <type>DateTime</type>
</CustomField>