force-app/main/default/objects/Account/fields/SalesOutboundSMSLastTryNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesOutboundSMSLastTryNumber__c</fullName>
    <description>Sales Outbound SMS Last Try Number</description>
    <inlineHelpText>Sales Outbound SMS Last Try Number</inlineHelpText>
    <label>Sales Outbound SMS Last Try Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>