force-app/main/default/objects/Account/fields/SalesOutboundSMSValidatedDate__c.field-meta.xml
<CustomField>
    <fullName>SalesOutboundSMSValidatedDate__c</fullName>
    <label>SalesOutboundSMSValidatedDate</label>
    <type>DateTime</type>
</CustomField>